--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
-RewriteCond %{HTTP_HOST} ^www\.(.+)$ [NC]
-RewriteCond %{HTTPS}s ^on(s)|
-RewriteRule ^ http%2://%1%{REQUEST_URI} [L,R=301]
+RewriteEngine On
+RewriteCond %{HTTP_HOST} ^www.example.com$ [NC]
+RewriteRule ^(.*)$ http://example.com/$1 [R=301,L]
