--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
 RewriteCond %{HTTP_HOST} ^www.tshewangrinzin.com$ [NC]
-RewriteRule ^(.*)$ http://tshewangrinzin.com/$1 [R=301,L]
+RewriteRule ^(.*)$ tshewangrinzin.com/$1 [R=301,L]
