--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,6 @@
 RewriteEngine On
 RewriteCond %{HTTP_HOST} ^www.tshewangrinzin.com$ [NC]
 RewriteRule ^(.*)$ tshewangrinzin.com/$1 [R=301,L]
+
+RewriteCond %{HTTP_HOST} ^www.tshewang.com$ [NC]
+RewriteRule ^(.*)$ tshewang.com/$1 [R=301,L]
